--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,6 @@
 <html>
   <form action='/checkout' method='post'>
     <input type="text" name="item">
+    <input type="submit" value="submit">
   </form>
 </html>
